--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangecollectionloadoptions.yml
@@ -170,7 +170,7 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#formulas:member'
     summary: |-
-      对于集合中的每一项：代表 A1 样式表示法中的公式。 将公式设置为区域时，value 参数可以是单个值（字符串），也可以是二维数组。 如果参数是单个值，它将应用于区域中的所有单元格。
+      对于集合中的每一项：代表 A1 样式表示法中的公式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulas
@@ -185,7 +185,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#formulasLocal:member'
     summary: |-
-      对于集合中的每一项：代表 A1 样式表示法中的公式，位于用户的语言和数字格式设置区域中。 例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中将变为 "=SUMME(A1; 1,5)"。 将公式设置为区域时，value 参数可以是单个值（字符串），也可以是二维数组。 如果参数是单个值，它将应用于区域中的所有单元格。
+      对于集合中的每一项：代表 A1 样式表示法中的公式，位于用户的语言和数字格式设置区域中。 例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中将变为 "=SUMME(A1; 1,5)"。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulasLocal
@@ -200,7 +200,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#formulasR1C1:member'
     summary: |-
-      对于集合中的每一项：以 R1C1 样式表示法表示的公式。 将公式设置为区域时，value 参数可以是单个值（字符串），也可以是二维数组。 如果参数是单个值，它将应用于区域中的所有单元格。
+      对于集合中的每一项：以 R1C1 样式表示法表示的公式。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulasR1C1
@@ -290,7 +290,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#numberFormat:member'
     summary: |-
-      对于集合中的每一项：表示给定范围的 Excel 的编号格式代码。 将数字格式设置为一个区域时，value 参数可以是单个值（string），也可以是二维数组。 如果参数是单个值，它将应用于区域中的所有单元格。
+      对于集合中的每一项：表示给定范围的 Excel 的编号格式代码。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
@@ -305,7 +305,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#numberFormatLocal:member'
     summary: |-
-      对于集合中的每一项：根据用户的语言设置，代表给定区域的 Excel 数字格式代码。 将数字格式设置为局部区域时，value 参数可以是单个值（字符串），也可以是二维数组。 如果参数是单个值，它将应用于区域中的所有单元格。 在获取或设置`numberFormatLocal`属性时，Excel 不会执行任何语言或格式强制。 任何返回的文本将根据系统设置中指定的语言使用本地格式化的字符串。
+      对于集合中的每一项：根据用户的语言设置，代表给定区域的 Excel 数字格式代码。 在获取或设置`numberFormatLocal`属性时，Excel 不会执行任何语言或格式强制。 任何返回的文本将根据系统设置中指定的语言使用本地格式化的字符串。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormatLocal
@@ -395,7 +395,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#values:member'
     summary: |-
-      对于集合中的每一项：代表指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。 将值设置为一个范围时，value 参数可以是单个值（string、number 或 boolean），也可以是一个二维数组。 如果参数是单个值，它将应用于区域中的所有单元格。
+      对于集合中的每一项：代表指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
