--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.messageread.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.messageread.yml
@@ -10,7 +10,7 @@ items:
 
       - [ItemRead](xref:outlook!Office.ItemRead:interface)
 
-      - [邮件](xref:outlook!Office.Message:interface)
+      - [Message](xref:outlook!Office.Message:interface)
     name: Office.MessageRead
     fullName: Office.MessageRead
     langs:
@@ -175,6 +175,10 @@ items:
 
       console.log(outputString);
       ```
+      ```javascript
+      var attachments = Office.context.mailbox.item.attachments;
+      console.log(attachments);
+      ```
     name: attachments
     fullName: attachments
     langs:
@@ -237,6 +241,13 @@ items:
 
       ```javascript
       console.log(JSON.stringify(Office.context.mailbox.item.cc));
+      ```
+      ```javascript
+      var msgCc = Office.context.mailbox.item.cc;
+      console.log("Message copied to:");
+      for (var i = 0; i < msgCc.length; i++) {
+        console.log(msgCc[i].displayName + " (" + msgCc[i].emailAddress + ")");
+      }
       ```
     name: cc
     fullName: cc
@@ -407,6 +418,11 @@ items:
           }
       });
       ```
+      ```javascript
+      Office.context.mailbox.item.displayReplyAllForm(
+        "This is a reply ALL with <b>some bold text</b>."
+      );
+      ```
     name: 'displayReplyAllForm(formData, callback)'
     fullName: 'displayReplyAllForm(formData, callback)'
     langs:
@@ -510,6 +526,30 @@ items:
           }
       });
       ```
+      ```javascript
+      Office.context.mailbox.item.displayReplyForm(
+        "This is a reply with <i>some text in italics</i>."
+      );
+      ```
+      ```javascript
+      Office.context.mailbox.item.displayReplyForm(
+      {
+          htmlBody : "This is a reply with a couple of attachments - an inline image and an item<br><img src='cid:dog.jpg'>",
+          attachments :
+          [
+              { type: "file", url: "http://i.imgur.com/9S36xvA.jpg", name: "dog.jpg", isInline: true },
+              { type: "item", itemId : Office.context.mailbox.item.itemId, name: "test_email.msg" }
+          ],
+          options : { asyncContext: null },
+          callback : function (result)
+          {
+              if (result.status !== Office.AsyncResultStatus.Succeeded)
+              {
+                  console.error(`Action failed with message ${result.error.message}`);
+              }
+          }
+      });
+      ```
     name: 'displayReplyForm(formData, callback)'
     fullName: 'displayReplyForm(formData, callback)'
     langs:
@@ -571,6 +611,10 @@ items:
       var from = Office.context.mailbox.item.from;
       console.log("From " + from);
       ```
+      ```javascript
+      var msgFrom = Office.context.mailbox.item.from;
+      console.log("Message received from: " + msgFrom.displayName + " (" + msgFrom.emailAddress + ")");
+      ```
     name: from
     fullName: from
     langs:
@@ -598,6 +642,49 @@ items:
 
       var contacts = Office.context.mailbox.item.getEntities().contacts;
       ```
+      ```javascript
+      var entities = Office.context.mailbox.item.getEntities();
+      var entityTypesFound = 0;
+      if (entities.addresses.length > 0) {
+          console.warn("physical addresses: ");
+          console.log(entities.addresses);
+          entityTypesFound++;
+      }
+      if (entities.contacts.length > 0) {
+          console.warn("contacts: ");
+          entities.contacts.forEach(function (contact) { console.log(contact.personName); })
+          entityTypesFound++;
+      }
+      if (entities.emailAddresses.length > 0) {
+          console.warn("email addresses: ");
+          console.log(entities.emailAddresses);
+          entityTypesFound++;
+      }
+      if (entities.meetingSuggestions.length > 0) {
+          console.warn("meetings suggestions: ");
+          entities.meetingSuggestions.forEach(function (meetingSuggestion) { console.log(meetingSuggestion.meetingString); })
+          entityTypesFound++;
+      }
+      if (entities.phoneNumbers.length > 0) {
+          console.warn("phone numbers: ");
+          entities.phoneNumbers.forEach(function (phoneNumber) { console.log(phoneNumber.originalPhoneString); })
+          entityTypesFound++;
+      }
+      if (entities.taskSuggestions.length > 0) {
+          console.warn("task suggestions: ");
+          entities.taskSuggestions.forEach(function (taskSuggestion) { console.log(taskSuggestion.taskString); })
+          entityTypesFound++;
+      }
+      if (entities.urls.length > 0) {
+          console.warn("URLs: ");
+          console.log(entities.urls);
+          entityTypesFound++;
+      }
+      if (entityTypesFound == 0)
+      {
+          console.log("No entities found on this item.");
+      }
+      ```
     name: getEntities()
     fullName: getEntities()
     langs:
@@ -621,7 +708,7 @@ items:
 
       当使用此方法的最低权限级别受限时，某些实体类型需要 ReadItem 才能进行访问，如下表中所指定。
 
-      <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>Address</td> <td>String</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
+      <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>String</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
 
       #### <a name="examples"></a>示例
 
@@ -640,6 +727,9 @@ items:
               // Continue processing the array of addresses.
           });
       };
+      ```
+      ```javascript
+      console.log(Office.context.mailbox.item.getEntitiesByType(Office.MailboxEnums.EntityType.Address));
       ```
     name: getEntitiesByType(entityType)
     fullName: getEntitiesByType(entityType)
@@ -668,6 +758,13 @@ items:
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：邮件已阅读
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      // This API would only work when you click on highlighted physical address that has the word "Way" in it.
+      console.log(Office.context.mailbox.item.getFilteredEntitiesByName("sampleFilterName"));
+      ```
     name: getFilteredEntitiesByName(name)
     fullName: getFilteredEntitiesByName(name)
     langs:
@@ -723,6 +820,10 @@ items:
       var fruits = allMatches.fruits;
       var veggies = allMatches.veggies;
       ```
+      ```javascript
+      // This API would only work when you click on highlighted word "ScriptLab".
+      console.log(Office.context.mailbox.item.getRegExMatches());
+      ```
     name: getRegExMatches()
     fullName: getRegExMatches()
     langs:
@@ -769,6 +870,10 @@ items:
       var fruits = Office.context.mailbox.item.getRegExMatchesByName("fruits");
       var veggies = Office.context.mailbox.item.getRegExMatchesByName("veggies");
       ```
+      ```javascript
+      // This API would only work when you click on highlighted word "ScriptLab".
+      console.log(Office.context.mailbox.item.getRegExMatchesByName("sampleRegexName"));
+      ```
     name: getRegExMatchesByName(name)
     fullName: getRegExMatchesByName(name)
     langs:
@@ -803,6 +908,49 @@ items:
       // The following example accesses the addresses entities in the highlighted
       // match selected by the user.
       var addresses = Office.context.mailbox.item.getSelectedEntities().addresses;
+      ```
+      ```javascript
+      var entities = Office.context.mailbox.item.getSelectedEntities();
+      var entityTypesFound = 0;
+      if (entities.addresses.length > 0) {
+          console.warn("physical addresses: ");
+          console.log(entities.addresses);
+          entityTypesFound++;
+      }
+      if (entities.contacts.length > 0) {
+          console.warn("contacts: ");
+          entities.contacts.forEach(function (contact) { console.log(contact.personName); })
+          entityTypesFound++;
+      }
+      if (entities.emailAddresses.length > 0) {
+          console.warn("email addresses: ");
+          console.log(entities.emailAddresses);
+          entityTypesFound++;
+      }
+      if (entities.meetingSuggestions.length > 0) {
+          console.warn("meetings suggestions: ");
+          entities.meetingSuggestions.forEach(function (meetingSuggestion) { console.log(meetingSuggestion.meetingString); })
+          entityTypesFound++;
+      }
+      if (entities.phoneNumbers.length > 0) {
+          console.warn("phone numbers: ");
+          entities.phoneNumbers.forEach(function (phoneNumber) { console.log(phoneNumber.originalPhoneString); })
+          entityTypesFound++;
+      }
+      if (entities.taskSuggestions.length > 0) {
+          console.warn("task suggestions: ");
+          entities.taskSuggestions.forEach(function (taskSuggestion) { console.log(taskSuggestion.taskString); })
+          entityTypesFound++;
+      }
+      if (entities.urls.length > 0) {
+          console.warn("URLs: ");
+          console.log(entities.urls);
+          entityTypesFound++;
+      }
+      if (entityTypesFound == 0)
+      {
+          console.error("Open add-in by clicking on a highlighted entity, for this API to return something useful.");
+      }
       ```
     name: getSelectedEntities()
     fullName: getSelectedEntities()
@@ -855,6 +1003,15 @@ items:
       var selectedMatches = Office.context.mailbox.item.getSelectedRegExMatches();
       var fruits = selectedMatches.fruits;
       var veggies = selectedMatches.veggies;
+      ```
+      ```javascript
+      var matches = Office.context.mailbox.item.getSelectedRegExMatches();
+      if (matches) {
+          console.log(matches);
+      }
+      else {
+          console.error("Open add-in by clicking on a highlighted regex match, for this API to return something useful.");
+      }
       ```
     name: getSelectedRegExMatches()
     fullName: getSelectedRegExMatches()
@@ -1029,6 +1186,24 @@ items:
       function saveCallback(asyncResult) {
       }
       ```
+      ```javascript
+      Office.context.mailbox.item.loadCustomPropertiesAsync(function (result) {
+        if (result.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Loaded following custom properties:");
+          customProps = result.value;
+          var dataKey = Object.keys(customProps)[0];
+          var data = customProps[dataKey];
+          for (var propertyName in data)
+          {
+            var propertyValue = data[propertyName];
+            console.log(`${propertyName}: ${propertyValue}`);
+          }              
+        }
+        else {
+          console.error(`loadCustomPropertiesAsync failed with message ${result.error.message}`);
+        }
+      });
+      ```
     name: 'loadCustomPropertiesAsync(callback, userContext)'
     fullName: 'loadCustomPropertiesAsync(callback, userContext)'
     langs:
@@ -1114,6 +1289,56 @@ items:
           }
       );
       ```
+      ```javascript
+      var id = $("#notificationId").val();
+      var details =
+        {
+          type: "progressIndicator",
+          message: "Progress indicator with id = " + id
+        };
+      Office.context.mailbox.item.notificationMessages.addAsync(id, details, handleResult);
+      ```
+      ```javascript
+      var id = $("#notificationId").val();
+      var details =
+        {
+          type: "informationalMessage",
+          message: "Non-persistent informational notification message with id = " + id,
+          icon: "icon1",
+          persistent: false
+        };
+      Office.context.mailbox.item.notificationMessages.addAsync(id, details, handleResult);
+      ```
+      ```javascript
+      var id = $("#notificationId").val();
+      var details =
+        {
+          type: "informationalMessage",
+          message: "Persistent informational notification message with id = " + id,
+          icon: "icon1",
+          persistent: true
+        };
+      Office.context.mailbox.item.notificationMessages.addAsync(id, details, handleResult);
+      ```
+      ```javascript
+      Office.context.mailbox.item.notificationMessages.getAllAsync(handleResult);          
+      ```
+      ```javascript
+      var id = $("#notificationId").val();
+      Office.context.mailbox.item.notificationMessages.replaceAsync(
+        id,
+        {
+          type: "informationalMessage",
+          message: "Notification message with id = " + id + " has been replaced with an informational message.",
+          icon: "icon2",
+          persistent: false
+        },
+        handleResult);
+      ```
+      ```javascript
+      var id = $("#notificationId").val();
+      Office.context.mailbox.item.notificationMessages.removeAsync(id, handleResult);
+      ```
     name: notificationMessages
     fullName: notificationMessages
     langs:
@@ -1145,6 +1370,17 @@ items:
       ```javascript
       var recurrence = Office.context.mailbox.item.recurrence;
       console.log("Recurrence: " + JSON.stringify(recurrence));
+      ```
+      ```javascript
+      var recurrence = Office.context.mailbox.item.recurrence;
+
+      if (recurrence === undefined) {
+        console.log("This item is a message but not a meeting request.");
+      } else if (recurrence === null) {
+        console.log("This is a single appointment.");
+      } else {
+        console.log(recurrence);
+      }
       ```
     name: recurrence
     fullName: recurrence
@@ -1241,6 +1477,10 @@ items:
       var senderAddress = Office.context.mailbox.item.sender.emailAddress;
       console.log("Sender: " + senderName + " (" + senderAddress + ")");
       ```
+      ```javascript
+      var msgSender = Office.context.mailbox.item.sender;
+      console.log("Sender: " + msgSender.displayName + " (" + msgSender.emailAddress + ")");
+      ```
     name: sender
     fullName: sender
     langs:
@@ -1279,6 +1519,17 @@ items:
       var isSeriesInstance = (seriesId != null);
       console.log("SeriesId is " + seriesId 
           + " and isSeriesInstance is " + isSeriesInstance);
+      ```
+      ```javascript
+      var seriesId = Office.context.mailbox.item.seriesId;
+
+      if (seriesId === undefined) {
+        console.log("This is a message that's not a meeting request.");
+      } else if (seriesId === null) {
+        console.log("This is a single appointment, a parent series, or a meeting request for a series or single meeting.");
+      } else {
+        console.log("This is an instance belonging to series with ID " + seriesId);
+      }
       ```
     name: seriesId
     fullName: seriesId
@@ -1363,6 +1614,13 @@ items:
 
       ```javascript
       console.log(JSON.stringify(Office.context.mailbox.item.to));
+      ```
+      ```javascript
+      var msgTo = Office.context.mailbox.item.to;
+      console.log("Message sent to:");
+      for (var i = 0; i < msgTo.length; i++) {
+        console.log(msgTo[i].displayName + " (" + msgTo[i].emailAddress + ")");
+      }
       ```
     name: to
     fullName: to
