--- a/docs/docs-ref-autogen/excel/excel/excel.chart.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.chart.yml
@@ -338,6 +338,28 @@ items:
       return:
         type:
           - 'excel!Excel.ChartLegend:class'
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```javascript
+          // Set to show legend of Chart1 and make it on top of the chart.
+          Excel.run(function (ctx) { 
+              var chart = ctx.workbook.worksheets.getItem("Sheet1").charts.getItem("Chart1");    
+              chart.legend.visible = true;
+              chart.legend.position = "top"; 
+              chart.legend.overlay = false; 
+              return ctx.sync().then(function() {
+                      console.log("Legend Shown ");
+              });
+          }).catch(function(error) {
+              console.log("Error: " + error);
+              if (error instanceof OfficeExtension.Error) {
+                  console.log("Debug info: " + JSON.stringify(error.debugInfo));
+              }
+          });
+          ```
   - uid: 'excel!Excel.Chart#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
